--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recrux",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": false,
   "dependencies": {
     "@types/jest": "^20.0.2",
@@ -27,7 +27,9 @@
     "composition",
     "fp"
   ],
-  "files": ["build/dist"],
+  "files": [
+    "build/dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "react-scripts-ts test --env=jsdom",
