--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "typescript": "^2.4.1"
   },
   "devDependencies": {
+    "husky": "^0.14.2",
+    "lint-staged": "^4.0.0",
     "react-scripts-ts": "^2.3.2",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "tslint": "^5.4.3",
+    "tslint-config-prettier": "^1.1.0",
+    "tslint-language-service": "^0.9.6"
   },
   "peerDependencies": {
     "redux": "3.x"
@@ -27,13 +32,12 @@
     "composition",
     "fp"
   ],
-  "files": [
-    "build/dist"
-  ],
+  "files": ["build/dist"],
   "scripts": {
     "build": "tsc",
     "test": "react-scripts-ts test --env=jsdom",
-    "clean": "rm -rf build"
+    "clean": "rm -rf build",
+    "precommit": "lint-staged && npm run build"
   },
   "main": "build/dist/index.js",
   "typings": "./build/dist/index.d.ts",
@@ -46,5 +50,8 @@
     "name": "Daniel Manning"
   },
   "license": "MIT",
-  "npmName": "recrux"
+  "npmName": "recrux",
+  "lint-staged": {
+    "*.{ts,tsx}": ["prettier --write", "tslint --fix -p .", "git add"]
+  }
 }
