--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recrux",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": false,
   "dependencies": {
     "fp-ts": "^0.3.5",
@@ -32,7 +32,9 @@
     "composition",
     "fp"
   ],
-  "files": ["build/dist"],
+  "files": [
+    "build/dist"
+  ],
   "scripts": {
     "build": "tslint -p . && tsc",
     "test": "react-scripts-ts test --env=jsdom",
@@ -52,6 +54,9 @@
   "license": "MIT",
   "npmName": "recrux",
   "lint-staged": {
-    "*.{ts,tsx}": ["prettier --write", "git add"]
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
