--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "recrux",
   "version": "0.3.0",
   "private": false,
-  "dependencies": {
-    "fp-ts": "^0.3.5",
-    "ramda": "^0.24.1",
-    "typescript": "^2.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^20.0.8",
     "@types/node": "^8.0.26",
@@ -17,7 +13,8 @@
     "redux": "^3.7.1",
     "tslint": "^5.4.3",
     "tslint-config-prettier": "^1.1.0",
-    "tslint-language-service": "^0.9.6"
+    "tslint-language-service": "^0.9.6",
+    "typescript": "^2.5.2"
   },
   "peerDependencies": {
     "redux": "3.x"
@@ -32,9 +29,7 @@
     "composition",
     "fp"
   ],
-  "files": [
-    "build/dist"
-  ],
+  "files": ["build/dist"],
   "scripts": {
     "build": "tslint -p . && tsc",
     "test": "react-scripts-ts test --env=jsdom",
@@ -54,9 +49,6 @@
   "license": "MIT",
   "npmName": "recrux",
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{ts,tsx}": ["prettier --write", "git add"]
   }
 }
