--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "react-scripts-ts test --env=jsdom",
     "clean": "rm -rf build",
     "precommit": "lint-staged",
-    "prepublishOnly": "CI=true npm run test && npm run build"
+    "prepublishOnly": " npm run clean && CI=true npm run test && npm run build"
   },
   "main": "build/dist/index.js",
   "typings": "./build/dist/index.d.ts",
