Fixed tslint issues

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/node": "^8.0.26",
     "@types/ramda": "^0.24.9",
     "husky": "^0.14.2",
+    "jest": "^22.1.4",
     "lint-staged": "^4.0.0",
+    "prettier": "^1.10.2",
     "react-scripts-ts": "^2.7.0",
     "redux": "^3.7.1",
     "ts-jest": "^21.0.1",
